infrastructure/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.nguyenth4nh.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
    - host: id.nguyenth4nh.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-clusterip
                port:
                  number: 80
