infrastructure/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.nguyenth4nh.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
